kdeservicemenus-kanotix (0.3.2) unstable; urgency=low
  * remove cdbs auto-update feature.
  * remove knoppix virtual packages.
  * clean up debian/control.
  * bump compat level to 5.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,17 @@
+kdeservicemenus-kanotix (0.3.2) unstable; urgency=low
+
+  * remove cdbs auto-update feature.
+  * remove knoppix virtual packages.
+  * clean up debian/control.
+  * bump compat level to 5.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 17 Dec 2005 02:47:12 +0100
+
 kdeservicemenus-kanotix (0.3.1) unstable; urgency=low
 
   * overhaul packaging.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 23 Aug 2005 16:06:24 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 17 Dec 2005 02:47:07 +0100
 
 kdeservicemenus-kanotix (0.3) unstable; urgency=low
 
