--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-kanotix (0.3.3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 17 Dec 2005 02:51:15 +0100
+
 kdeservicemenus-kanotix (0.3.2) unstable; urgency=low
 
   * remove cdbs auto-update feature.
