[kdeservicemenus-kanotix] - prepare next version.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-kanotix (0.3.4) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed,  1 Nov 2006 00:39:52 +0100
+
 kdeservicemenus-kanotix (0.3.3) unstable; urgency=low
 
   * switch to utf-8.
