--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-kdeservicemenus-kanotix (0.3.4) UNRELEASED; urgency=low
+kdeservicemenus-kanotix (0.3.4) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * fix i18n handling.
+  * remove useless /etc/sysconfig/ dependency.
+  * re- indent.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed,  1 Nov 2006 00:39:52 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  9 Nov 2006 21:26:00 +0100
 
 kdeservicemenus-kanotix (0.3.3) unstable; urgency=low
 
