--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kdeservicemenus-kanotix (0.3.5) UNRELEASED; urgency=low
+kdeservicemenus-kanotix (0.3.5) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * fix unsafe tempfile handling.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  9 Nov 2006 21:27:35 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 10 Nov 2006 14:48:09 +0100
 
 kdeservicemenus-kanotix (0.3.4) unstable; urgency=low
 
