--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-kanotix (0.3.6) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 10 Nov 2006 14:49:48 +0100
+
 kdeservicemenus-kanotix (0.3.5) unstable; urgency=low
 
   * fix unsafe tempfile handling.
