--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-kdeservicemenus-kanotix (0.3.6) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.3.6) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 10 Nov 2006 14:49:48 +0100
+  * Initial version for sidux
+
+ -- Joaquim Boura <x-un-i@sidux.com>  Mon,  4 Dec 2006 19:29:44 +0100
 
 kdeservicemenus-kanotix (0.3.5) unstable; urgency=low
 
