--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-kdeservicemenus-sidux (0.3.6) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.3.6) unstable; urgency=low
 
-  * NOT RELEASED YET
-
+  [ Joaquim Boura ]
   * Initial version for sidux
 
- -- Joaquim Boura <x-un-i@sidux.com>  Mon,  4 Dec 2006 19:29:44 +0100
+  [ Stefan Lippers-Hollmann ]
+  * minor debian/control cosmetics.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue,  5 Dec 2006 13:17:04 +0100
 
 kdeservicemenus-kanotix (0.3.5) unstable; urgency=low
 
