--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kdeservicemenus-sidux (0.3.8) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.3.8) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * we need procps for kdeservices-sidux, not here.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 30 Dec 2006 17:41:31 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 30 Dec 2006 17:43:08 +0100
 
 kdeservicemenus-sidux (0.3.7) unstable; urgency=low
 
