--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kdeservicemenus-sidux (0.3.9) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.3.9) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * kdeservicemenus-kanotix was never part of sidux or debian, don't conflict
+    with it.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 30 Dec 2006 17:44:36 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  1 Mar 2007 17:14:11 +0100
 
 kdeservicemenus-sidux (0.3.8) unstable; urgency=low
 
