* only ship edit_as_su.desktop anymore. * drop now useless dependencies. * clean up packaging.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-kdeservicemenus-sidux (0.3.10) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.3.10) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * only ship edit_as_su.desktop anymore.
+  * drop now useless dependencies.
+  * clean up packaging.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  1 Mar 2007 17:16:45 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 11 Jul 2007 17:47:51 +0200
 
 kdeservicemenus-sidux (0.3.9) unstable; urgency=low
 
