* NOT RELEASED YET

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-sidux (0.3.11) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 11 Jul 2007 17:50:39 +0200
+
 kdeservicemenus-sidux (0.3.10) unstable; urgency=low
 
   * only ship edit_as_su.desktop anymore.
