--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 kdeservicemenus-sidux (0.3.11) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * remove obsolete components from source.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 11 Jul 2007 17:50:39 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 02 Aug 2007 13:24:25 +0200
 
 kdeservicemenus-sidux (0.3.10) unstable; urgency=low
 
