--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,10 @@
-kdeservicemenus-sidux (0.3.11) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.3.11) unstable; urgency=low
 
-  * NOT RELEASED YET
   * remove obsolete components from source.
   * add VCS control headers.
   * update syntax for Vcs headers in debian/control
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 07 Oct 2007 14:44:18 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 11 Oct 2007 00:35:12 +0200
 
 kdeservicemenus-sidux (0.3.10) unstable; urgency=low
 
