* update to Standards-Version 3.7.3, no changes necessary.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 kdeservicemenus-sidux (0.3.12) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * update to Standards-Version 3.7.3, no changes necessary.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 11 Oct 2007 00:36:39 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 13:52:24 +0100
 
 kdeservicemenus-sidux (0.3.11) unstable; urgency=low
 
