kdeservicemenus-sidux (0.3.12) unstable; urgency=low
  * update to Standards-Version 3.7.3, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 13:52:24 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,5 @@
-kdeservicemenus-sidux (0.3.12) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.3.12) unstable; urgency=low
 
-  * NOT RELEASED YET
   * update to Standards-Version 3.7.3, no changes necessary.
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Dec 2007 13:52:24 +0100
