* NOT RELEASED YET

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-sidux (0.3.13) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 08 Dec 2007 19:54:45 +0100
+
 kdeservicemenus-sidux (0.3.12) unstable; urgency=low
 
   * update to Standards-Version 3.7.3, no changes necessary.
