--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
 kdeservicemenus-sidux (0.3.13) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 08 Dec 2007 19:54:45 +0100
+  [ Joaquim Boura ]
+  * Translation thanks to RoEn
+
+ -- Joaquim Boura <x-un-i@sidux.com>  Tue, 18 Dec 2007 18:03:06 +0100
 
 kdeservicemenus-sidux (0.3.12) unstable; urgency=low
 
