--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,5 @@
-kdeservicemenus-sidux (0.3.13) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.3.13) unstable; urgency=low
 
-  [ Stefan Lippers-Hollmann ]
-  * NOT RELEASED YET
-
-  [ Joaquim Boura ]
   * Translation thanks to RoEn
 
  -- Joaquim Boura <x-un-i@sidux.com>  Tue, 18 Dec 2007 18:03:06 +0100
