--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kdeservicemenus-sidux (0.3.14) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.4.0) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * switch from custom su-me to generic su-to-root, adapt dependencies and
+    menu files accordingly.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 19 Dec 2007 11:38:33 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 Jan 2008 16:09:17 +0100
 
 kdeservicemenus-sidux (0.3.13) unstable; urgency=low
 
