--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-sidux (0.4.1) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 08 Jan 2008 16:10:45 +0100
+
 kdeservicemenus-sidux (0.4.0) unstable; urgency=low
 
   * switch from custom su-me to generic su-to-root, adapt dependencies and
