--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-sidux (0.4.2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 13 Jan 2008 16:10:23 +0100
+
 kdeservicemenus-sidux (0.4.1) unstable; urgency=low
 
   * fix broken quotation.
