--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kdeservicemenus-sidux (0.4.2) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.4.2) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * update to debhelper compat 6.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 13 Jan 2008 16:10:23 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 19 Jan 2008 00:05:19 +0100
 
 kdeservicemenus-sidux (0.4.1) unstable; urgency=low
 
