--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-sidux (0.4.5) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 20 Feb 2008 23:21:56 +0100
+
 kdeservicemenus-sidux (0.4.4) unstable; urgency=low
 
   * fix description spelling error.
