--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-sidux (0.4.6) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 07 May 2008 01:23:55 +0200
+
 kdeservicemenus-sidux (0.4.5) unstable; urgency=low
 
   * switch to the new dh implementation of debhelper 7.
