--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kdeservicemenus-sidux (0.4.6) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.4.6) unstable; urgency=low
 
-  * NOT RELEASED YET
+  * bump standards version to 3.8.0, no changes necessary.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 07 May 2008 01:23:55 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Jun 2008 16:22:56 +0200
 
 kdeservicemenus-sidux (0.4.5) unstable; urgency=low
 
