--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-sidux (0.4.7) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Jun 2008 16:24:31 +0200
+
 kdeservicemenus-sidux (0.4.6) unstable; urgency=low
 
   * bump standards version to 3.8.0, no changes necessary.
