--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 kdeservicemenus-sidux (0.4.7) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * edit_as_su.desktop: use kwrite and not kedit, since package depend on kate
+    and kate provides kwrite...
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Jun 2008 16:24:31 +0200
+ -- Kel Modderman <kel@otaku42.de>  Thu, 28 Aug 2008 03:36:28 +1000
 
 kdeservicemenus-sidux (0.4.6) unstable; urgency=low
 
