kdeservicemenus-sidux (0.4.7) unstable; urgency=low
  * edit_as_su.desktop: use kwrite and not kedit, since package depend on kate
    and kate provides kwrite...

 -- Kel Modderman <kel@otaku42.de>  Thu, 28 Aug 2008 03:36:28 +1000

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kdeservicemenus-sidux (0.4.7) UNRELEASED; urgency=low
+kdeservicemenus-sidux (0.4.7) unstable; urgency=low
 
   * edit_as_su.desktop: use kwrite and not kedit, since package depend on kate
     and kate provides kwrite...
