--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 kdeservicemenus-sidux (0.4.8) UNRELEASED; urgency=low
 
   * NOT RELEASED YET
+  * make lintian happy and depend on ${misc:Depends}.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 27 Aug 2008 20:08:45 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 08 Dec 2008 02:45:20 +0100
 
 kdeservicemenus-sidux (0.4.7) unstable; urgency=low
 
