NOT RELEASED YET

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kdeservicemenus-sidux (0.4.9) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 08 Dec 2008 22:46:39 +0100
+
 kdeservicemenus-sidux (0.4.8) unstable; urgency=low
 
   * make lintian happy and depend on ${misc:Depends}.
